/*
 * SonarQube
 * Copyright (C) 2009-2019 SonarSource SA
 * mailto:info AT sonarsource DOT com
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
 * License as published by the Free Software Foundation; either
 * version 3 of the License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public License
 * along with this program; if not, write to the Free Software Foundation,
 * Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 */
import * as React from 'react';
import { shallow } from 'enzyme';
import LargeQualityGateBadge from '../LargeQualityGateBadge';
import { mockComponent } from '../../../../helpers/testMocks';
import { isSonarCloud } from '../../../../helpers/system';

jest.mock('../../../../helpers/system', () => ({
  isSonarCloud: jest.fn()
}));

it('should render correctly for SQ', () => {
  (isSonarCloud as jest.Mock).mockReturnValue(false);

  expect(shallowRender()).toMatchSnapshot();
  expect(shallowRender({ level: 'OK' })).toMatchSnapshot();
});

it('should render the link correctly for SC', () => {
  (isSonarCloud as jest.Mock).mockReturnValue(true);
  expect(shallowRender()).toMatchSnapshot();
});

function shallowRender(props = {}) {
  return shallow(<LargeQualityGateBadge component={mockComponent()} level="ERROR" {...props} />);
}
